<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Adriana Bellido Serrán.</b></string>
    <string name="accept">Aceptar</string>

    <string name="title_guide_welcome">BIENVENIDO</string>
    <string name="text1_guide_welcome">Prepárate para explorar el mundo mágico de esta aplicación inspirada en</string>
    <string name="text2_guide_welcome">Aqui aprenderás a navegar por pestañas llenas de dragones, mundos fascinantes y montones de tesoros brillantes.</string>
    <string name="text3_guide_welcome">¿Listos para empezar?</string>
    <string name="text4_guide_welcome">Pulsa \"Comenzar\" y deja que Spyro te lleve volando a través de esta guía interactiva.</string>
    <string name="tv_textWelcome_start">COMENZAR</string>
    <string name="btn_text_skip">Saltar guía</string>
    <string name="tv_guide_characters">Aquí podrás explorar a todos los personajes del mundo de Spyro</string>
    <string name="tv_guide_worlds">Aquí podrás explorar todos los mundos de Spyro</string>
    <string name="tv_guide_colectibles">Aquí podrás explorar todos los coleccionables del mundo de Spyro</string>
    <string name="btn_text_next">Siguiente</string>
    <string name="btn_end_guide">Finalizar guía</string>
    <string name="tv_guide_info_icon">Aquí podrás encontrar la información de la app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>