<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/guideWelcomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_transparent"
    android:clickable="true"
    android:focusable="true">


    <TextView
        android:id="@+id/tv_textWelcomeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/title_guide_welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_textWelcomeFirstParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/text1_guide_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/guide_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_textWelcomeTitle" />

    <ImageView
        android:id="@+id/iv_welcomeSpyroLogo"
        android:layout_width="270dp"
        android:layout_height="110dp"
        android:layout_margin="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/spyro_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_textWelcomeFirstParagraph" />

    <TextView
        android:id="@+id/tv_textWelcomeSecondParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_marginTop="24dp"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/text2_guide_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/guide_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcomeSpyroLogo" />

    <TextView
        android:id="@+id/tv_textWelcomeThirdParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/text3_guide_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/guide_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_textWelcomeSecondParagraph" />

    <TextView
        android:id="@+id/tv_textWelcomeFourthParagraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="left"
        android:padding="5dp"
        android:text="@string/text4_guide_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/guide_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_textWelcomeThirdParagraph" />

    <ImageView
        android:id="@+id/iv_welcomeSpyro"
        android:layout_width="169dp"
        android:layout_height="81dp"
        android:layout_marginTop="544dp"
        android:src="@drawable/spyro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.widget.Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/gems"
        android:text="@string/tv_textWelcome_start"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_exit_guide"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcomeSpyro"
        app:layout_constraintVertical_bias="0.534" />

    <android.widget.Button
        android:id="@+id/btn_exit_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:padding="20dp"
        android:text="@string/tv_textWelcome_skip"
        android:textAllCaps="false"
        android:textColor="@color/purple"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_welcomeSpyro" />


</androidx.constraintlayout.widget.ConstraintLayout>