<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guideFinalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone"
    tools:visibility="visible">

    <!--   Resume characters   -->
    <ImageView
        android:id="@+id/pulseImageFinalCharacters"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/circle_focus_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/av_arrow_SelectionFinalCharacters"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="down_arrow_lottie.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textStepFinalCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/speech_bubble_left"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingTop="30dp"
        android:paddingBottom="60dp"
        android:text="@string/tv_guide_characters"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"
        app:layout_constraintBottom_toTopOf="@+id/pulseImageFinalCharacters"
        app:layout_constraintStart_toEndOf="@id/pulseImageFinalCharacters" />

    <!--   Resume worlds   -->
    <ImageView
        android:id="@+id/pulseImageFinalWorlds"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/circle_focus_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/av_arrow_SelectionFinalWorlds"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="down_arrow_lottie.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textStepFinalWorlds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-30dp"
        android:background="@drawable/speech_bubble_left"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:text="@string/tv_guide_worlds"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"
        app:layout_constraintBottom_toTopOf="@+id/av_arrow_SelectionFinalWorlds"
        app:layout_constraintStart_toEndOf="@+id/pulseImageFinalWorlds" />

    <!--   Resume collectibles   -->
    <ImageView
        android:id="@+id/pulseImageFinalCollectibles"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:src="@drawable/circle_focus_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/av_arrow_SelectionFinalCollectibles"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="down_arrow_lottie.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textStepFinalCollectibles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/speech_bubble_right"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:text="@string/tv_guide_colectibles"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"
        app:layout_constraintBottom_toTopOf="@+id/pulseImageFinalCollectibles"
        app:layout_constraintEnd_toStartOf="@id/av_arrow_SelectionFinalCollectibles"
        tools:layout_constraintStart_toStartOf="parent" />

    <!--   Resume info icon   -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/av_arrow_SelectionFinalInfoIcon"
        android:layout_width="53dp"
        android:layout_height="106dp"
        app:layout_constraintStart_toStartOf="@+id/pulseImageFinalInfoIcon"
        app:layout_constraintTop_toBottomOf="@+id/pulseImageFinalInfoIcon"
        app:lottie_autoPlay="true"
        app:lottie_fileName="up_arrow_lottie.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textStepFinalInfoIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-25dp"
        android:layout_marginRight="-25dp"
        android:background="@drawable/speech_bubble_upside_right"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingTop="50dp"
        android:paddingBottom="30dp"
        android:text="@string/tv_guide_info_icon"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"
        app:layout_constraintEnd_toStartOf="@+id/pulseImageFinalInfoIcon"
        app:layout_constraintTop_toBottomOf="@+id/pulseImageFinalInfoIcon" />

    <ImageView
        android:id="@+id/pulseImageFinalInfoIcon"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:src="@drawable/circle_focus_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--   Finale button   -->
    <android.widget.Button
        android:id="@+id/btn_exit_guide_Final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="@color/dark_purple"
        android:paddingHorizontal="10dp"
        android:text="@string/btn_end_guide"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/small_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>